# kate-plugins

./: .gitignore  .kateproject  CLAUDE.md  CMakeLists.txt  KateBookmarksPlugin.cpp  KateBookmarksPlugin.h  KateBookmarksPlugin.hpp  README.md  katebookmarksplugin.json
katebookmarksplugin/: CMakeLists.txt  KateBookmarksPlugin.cpp
src/: CMakeLists.txt
src/bookmarks_tree/: BookmarksTreePlugin.cpp  BookmarksTreePlugin.hpp  CMakeLists.txt  bookmarks_tree.json
src/ripgrep_search/: CMakeLists.txt  RipgrepCommand.cpp  RipgrepCommand.hpp  RipgrepSearchPlugin.cpp  RipgrepSearchPlugin.hpp  RipgrepSearchView.cpp  RipgrepSearchView.hpp  SearchResultsModel.cpp  SearchResultsModel.hpp  SearchResultsView.cpp  SearchResultsView.hpp  actions.rc  plugin.qrc  ripgrep_search.json
